<resources>
    <string name="app_name">medimindRewards</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="existing_rewards">Existing Rewards</string>
    <string name="all_rewards">All Rewards</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="navbar">navbar</string>
    <string name="points">points</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_wishlist_fragment_label" />
    <string name="my_rewards_fragment_label" />
    <string name="my_wishlist2">My Wishlist</string>
    <string name="all_rewards_title">All Rewards</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="all_rewards_title2">All Rewards</string>
    <string name="existing_rewards_title">Existing Rewards</string>
    <string name="home_icon_rewards">home icon</string>
    <string name="back_icon_rewards">back icon</string>
    <string name="time_of_day">Time of Day</string>
    <string name="medication_type">Medication Type</string>
    <string name="my_medication">My Medication</string>
    <string name="next_appointment_10_days">Next Appointment: 10 Days</string>
    <string name="today">Today</string>
    <string name="all_medication">All Medication</string>
    <string name="logo">Logo</string>
    <string name="medicine_name">Medicine name</string>
    <string name="dosage_information">Dosage Information</string>
    <string name="mental_health">MENTAL HEALTH</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_your_profile_title">WELCOME TO YOUR PROFILE</string>
    <string name="voucher">Voucher:</string>
    <string name="unknown">Unknown</string>
    <string name="points1">Points:</string>
    <string name="voucher_item">VOUCHER</string>
    <string name="type_item">TYPE</string>
    <string name="claim_item">CLAIM</string>
    <string name="type_items">TYPE</string>
    <string name="view_all_item">VIEW ALL</string>
    <string name="my_report_title">My Report</string>
    <string name="date_placeholder_myreport">Date Placeholder</string>
    <string name="points_123">Points: 123</string>
    <string name="Reminder">Reminder</string>
    <string name="ReminderButton">Reminder</string>
    <string name="new_reminder">New Reminder</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="date">Date</string>
    <string name="save_new_reminder">Save</string>
    <string name="cancel_new_reminder">Cancel</string>
    <string name="add_new_remind_icon">+</string>
</resources>