<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/xinglan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".CreateNewReminderItem">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_reminder"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:gravity="center"
        android:fontFamily="sans-serif" />
    <EditText
        android:id="@+id/new_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:background="@color/light_pink"
        android:textSize="18sp"
        android:textColor="@color/black" />
    <EditText
        android:id="@+id/new_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/content"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:background="@color/light_pink"
        android:textSize="18sp"
        android:textColor="@color/black" />
    <EditText
        android:id="@+id/new_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:background="@color/light_pink"
        android:textSize="18sp"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/save_new_reminder_btn"
            android:text="@string/save_new_reminder" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/cancel_new_reminder_btn"
            android:text="@string/cancel_new_reminder" />
    </LinearLayout>

</LinearLayout>