<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="20dp"
    android:layout_margin="20dp"
    android:backgroundTint="#FFFFFF">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="6dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/existingType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/type_item"
            android:textColor="@color/text_color"
            android:textSize="25sp">

        </TextView>

        <TextView
            android:id="@+id/existingVoucher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/voucher_item"
            android:textColor="@color/text_color"
            android:textSize="25sp"></TextView>

        <Button
            android:id="@+id/existingClaimButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/main_blue"
            android:text="@string/claim_item"
            android:textSize="16sp"
            app:cornerRadius="18dp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>