<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllRewardsFragment"
    android:fillViewport="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/backButtonAllRewards"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="#00E6E6E6"
            android:contentDescription="@string/home_icon_rewards"
            android:scaleType="fitCenter"
            android:src="@drawable/right"
            app:layout_constraintHorizontal_bias="0.021"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/homeButtonAllRewards"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="#00E6E6E6"
            android:contentDescription="@string/back_icon_rewards"
            android:scaleType="fitCenter"
            android:src="@drawable/home2"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/AllRewardsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/all_rewards_title2"
            android:textColor="@color/text_highlighted"
            android:textSize="28sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/allRewardsRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/AllRewardsTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/allrewards_item"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>