<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    tools:context=".MyRewardsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/backButtonRewards"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="#00E6E6E6"
            android:scaleType="fitCenter"
            android:src="@drawable/right"
            app:layout_constraintHorizontal_bias="0.021"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/homeButtonRewards"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="#00E6E6E6"
            android:scaleType="fitCenter"
            android:src="@drawable/home2"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rewardsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/my_rewards"
            android:textColor="#013A8F"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/pointsProgressBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/pointsProgressBar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:indeterminateOnly="false"
            android:progress="60"
            android:progressDrawable="@drawable/circle"
            app:layout_constraintBottom_toTopOf="@id/wishlistButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rewardsTitle" />

        <TextView
            android:id="@+id/pointsCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="60pts"
            android:textColor="#013A8F"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/pointsProgressBar"
            app:layout_constraintLeft_toLeftOf="@id/pointsProgressBar"
            app:layout_constraintRight_toRightOf="@id/pointsProgressBar"
            app:layout_constraintTop_toTopOf="@id/pointsProgressBar" />


        <Button
            android:id="@+id/wishlistButton"
            android:layout_width="360dp"
            android:layout_height="65dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/main_blue"
            android:fontFamily="sans-serif"
            android:text="@string/my_wishlist"
            android:textSize="24sp"
            app:cornerRadius="26dp"
            app:layout_constraintBottom_toTopOf="@id/rewardsButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pointsProgressBar" />

        <Button
            android:id="@+id/rewardsButton"
            android:layout_width="360dp"
            android:layout_height="65dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/main_blue"
            android:fontFamily="sans-serif"
            android:text="@string/all_rewards"
            android:textSize="24sp"
            app:cornerRadius="26dp"
            app:layout_constraintBottom_toTopOf="@id/existingButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wishlistButton" />

        <Button
            android:id="@+id/existingButton"
            android:layout_width="360dp"
            android:layout_height="65dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/main_blue"
            android:fontFamily="sans-serif"
            android:text="@string/existing_rewards"
            android:textSize="24sp"
            app:cornerRadius="26dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rewardsButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>